--- a/index.html
+++ b/index.html
@@ -593,19 +593,17 @@
                 tag: "發錢實作",
                 title: "轉帳資訊匿名公開",
                 content: (
-                    <div className="flex flex-col h-full min-h-0 py-2">
-                        <div className="flex-shrink-0 space-y-3 mb-4">
-                            <p className="text-lg text-slate-600">
-                                只要有對方的錢包地址，就可以看到對方的交易記錄。鏈上金流只要有地址就能追蹤——前面用以太幣空投給大家，所以可以直接從鏈上看到所有人的金流記錄。
-                            </p>
-                            <a href="https://www.oklink.com" target="_blank" rel="noopener noreferrer" className="inline-flex items-center gap-2 text-amber-600 hover:text-amber-700 font-bold text-lg underline">
-                                在 OKLink 查詢鏈上交易 →
-                            </a>
+                    <div className="flex flex-col h-full min-h-0 gap-4 md:gap-6">
+                        <p className="text-lg text-slate-600 flex-shrink-0">
+                            只要有對方的錢包地址，就可以看到對方的交易記錄。鏈上金流只要有地址就能追蹤——前面用以太幣空投給大家，所以可以直接從鏈上看到所有人的金流記錄。
+                        </p>
+                        <a href="https://www.oklink.com" target="_blank" rel="noopener noreferrer" className="inline-flex items-center gap-2 text-amber-600 hover:text-amber-700 font-bold text-lg underline flex-shrink-0">
+                            在 OKLink 查詢鏈上交易 →
+                        </a>
+                        <div className="flex-1 min-h-0 flex items-center justify-center overflow-hidden">
+                            <img src="https://i.urusai.cc/gIGej.png" alt="OKLink 鏈上交易查詢畫面" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                         </div>
-                        <div className="flex-1 min-h-0 flex items-center justify-center">
-                            <img src="https://i.urusai.cc/gIGej.png" alt="OKLink 鏈上交易查詢畫面" className="max-h-[280px] md:max-h-[340px] w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
-                        </div>
-                        <p className="flex-shrink-0 text-center text-sm text-slate-500 mt-2">OKLink：輸入錢包地址即可追蹤鏈上金流</p>
+                        <p className="text-center text-sm text-slate-500 flex-shrink-0">OKLink：輸入錢包地址即可追蹤鏈上金流</p>
                     </div>
                 )
             },
@@ -831,12 +829,12 @@
                         );
                     case 'detail':
                         return (
-                            <div className="flex flex-col h-full px-4 md:px-12 py-6 md:py-10 max-w-7xl mx-auto overflow-hidden">
-                                <div className="flex flex-col md:flex-row md:items-center gap-4 md:gap-6 mb-6 md:mb-8 flex-shrink-0">
+                            <div className="flex flex-col h-full px-4 md:px-10 py-6 md:py-8 max-w-7xl mx-auto overflow-hidden min-h-0">
+                                <div className="flex flex-col md:flex-row md:items-center gap-4 md:gap-6 mb-4 md:mb-6 flex-shrink-0">
                                     <span className="self-start md:self-auto bg-amber-500 text-white px-4 py-2 rounded-lg text-base md:text-lg font-bold shadow-md">{slide.tag}</span>
-                                    <h2 className="text-2xl md:text-5xl font-bold text-slate-800 leading-tight">{slide.title}</h2>
+                                    <h2 className="text-2xl md:text-5xl font-bold text-slate-800 leading-tight border-l-8 border-amber-500 pl-6">{slide.title}</h2>
                                 </div>
-                                <div className="flex-1 bg-white rounded-3xl shadow-lg border border-slate-200 p-6 md:p-10 overflow-hidden flex flex-col justify-center min-h-0">
+                                <div className="flex-1 min-h-0 overflow-hidden flex flex-col">
                                     {slide.content}
                                 </div>
                             </div>
