--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@
                 tag: "入門比特幣",
                 title: "貨幣越來越「沒用」",
                 content: (
-                    <div className="w-full max-w-5xl mx-auto">
-                        <div className="relative">
+                    <div className="w-full max-w-5xl mx-auto flex flex-col justify-center items-center h-full min-h-0">
+                        <div className="relative w-full">
                             <div className="hidden md:block absolute left-[10%] right-[10%] top-[32%] h-0.5 bg-gradient-to-r from-slate-300 via-slate-200 to-amber-400 rounded-full z-0" />
                             <div className="flex flex-col md:flex-row items-stretch justify-between gap-8 md:gap-0 w-full relative z-10">
                                 {[
