--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
                                                 <img src={item.src} alt={item.label} className="w-full h-full object-contain" />
                                             </div>
                                             <div className="mt-3 text-center">
-                                                <span className="block font-bold text-slate-800 text-lg md:text-xl">{item.label}</span>
-                                                <span className="block text-base text-slate-500">{item.sub}</span>
+                                                <span className="block font-bold text-slate-800 text-xl md:text-2xl">{item.label}</span>
+                                                <span className="block text-lg text-slate-500">{item.sub}</span>
                                             </div>
                                         </div>
                                         {i < 3 && (
@@ -361,9 +361,9 @@
                             </div>
                         </div>
                         <div className="mt-6 flex items-center justify-center gap-3 text-slate-400">
-                            <span className="text-base font-medium">實體</span>
+                            <span className="text-lg font-medium">實體</span>
                             <div className="w-36 h-1.5 rounded-full bg-gradient-to-r from-slate-400 via-slate-300 to-amber-500" />
-                            <span className="text-base font-medium">數位</span>
+                            <span className="text-lg font-medium">數位</span>
                         </div>
                     </div>
                 ),
@@ -424,7 +424,7 @@
                                 <div className="w-full max-w-[100px] md:max-w-[130px] aspect-square rounded-2xl border-2 border-slate-200 bg-white shadow-sm overflow-hidden flex items-center justify-center p-2">
                                     <img src="https://i.urusai.cc/z7gGr.png" alt="買家" className="w-full h-full object-contain" />
                                 </div>
-                                <p className="font-bold text-slate-800 mt-3 text-lg">買家</p>
+                                <p className="font-bold text-slate-800 mt-3 text-xl md:text-2xl">買家</p>
                             </div>
                             <span className="text-2xl text-slate-300 font-bold hidden md:inline">→</span>
                             <span className="text-2xl text-slate-300 font-bold md:hidden">↓</span>
@@ -433,7 +433,7 @@
                                 <div className="w-full max-w-[100px] md:max-w-[130px] aspect-square rounded-2xl border-2 border-slate-300 bg-white shadow-md overflow-hidden flex items-center justify-center p-2">
                                     <img src="https://i.urusai.cc/VPGPL.png" alt="銀行（中間人）" className="w-full h-full object-contain" />
                                 </div>
-                                <p className="font-bold text-slate-800 mt-3 text-lg">銀行（中間人）</p>
+                                <p className="font-bold text-slate-800 mt-3 text-xl md:text-2xl">銀行（中間人）</p>
                             </div>
                             <span className="text-2xl text-slate-300 font-bold hidden md:inline">→</span>
                             <span className="text-2xl text-slate-300 font-bold md:hidden">↓</span>
@@ -442,10 +442,10 @@
                                 <div className="w-full max-w-[100px] md:max-w-[130px] aspect-square rounded-2xl border-2 border-slate-200 bg-white shadow-sm overflow-hidden flex items-center justify-center p-2">
                                     <img src="https://i.urusai.cc/pGkxV.png" alt="賣家" className="w-full h-full object-contain" />
                                 </div>
-                                <p className="font-bold text-slate-800 mt-3 text-lg">賣家</p>
+                                <p className="font-bold text-slate-800 mt-3 text-xl md:text-2xl">賣家</p>
                             </div>
                         </div>
-                        <p className="text-slate-600 text-base md:text-lg font-medium mt-8 text-center max-w-xl">買家將款項存入銀行，經由銀行轉給賣家，完成交易</p>
+                        <p className="text-slate-600 text-lg md:text-xl font-medium mt-8 text-center max-w-xl">買家將款項存入銀行，經由銀行轉給賣家，完成交易</p>
                     </div>
                 )
             },
@@ -461,22 +461,22 @@
                                 <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-red-50 flex items-center justify-center mb-4">
                                     <svg className="w-7 h-7 md:w-8 md:h-8 text-red-500" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/><path d="m9 12 2 2 4-4"/></svg>
                                 </div>
-                                <h3 className="text-xl md:text-2xl font-bold text-slate-800 mb-2">洩漏隱私</h3>
-                                <p className="text-slate-600 text-base">交易與身份資訊經由中間人，隱私暴露風險高</p>
+                                <h3 className="text-2xl md:text-3xl font-bold text-slate-800 mb-2">洩漏隱私</h3>
+                                <p className="text-slate-600 text-lg">交易與身份資訊經由中間人，隱私暴露風險高</p>
                             </div>
                             <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-amber-200 hover:shadow-md transition-all flex flex-col items-center text-center">
                                 <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-amber-50 flex items-center justify-center mb-4">
                                     <svg className="w-7 h-7 md:w-8 md:h-8 text-amber-600" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><rect width="18" height="18" x="3" y="3" rx="2"/><path d="M3 9h18"/><path d="M9 21V9"/></svg>
                                 </div>
-                                <h3 className="text-xl md:text-2xl font-bold text-slate-800 mb-2">進入門檻</h3>
-                                <p className="text-slate-600 text-base">開戶、審核、地域限制，阻礙自由參與</p>
+                                <h3 className="text-2xl md:text-3xl font-bold text-slate-800 mb-2">進入門檻</h3>
+                                <p className="text-slate-600 text-lg">開戶、審核、地域限制，阻礙自由參與</p>
                             </div>
                             <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-amber-200 hover:shadow-md transition-all flex flex-col items-center text-center">
                                 <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-blue-50 flex items-center justify-center mb-4">
                                     <svg className="w-7 h-7 md:w-8 md:h-8 text-blue-600" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M12 2v20M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/></svg>
                                 </div>
-                                <h3 className="text-xl md:text-2xl font-bold text-slate-800 mb-2">交易彈性</h3>
-                                <p className="text-slate-600 text-base">時間、額度、幣別受中間人規則限制</p>
+                                <h3 className="text-2xl md:text-3xl font-bold text-slate-800 mb-2">交易彈性</h3>
+                                <p className="text-slate-600 text-lg">時間、額度、幣別受中間人規則限制</p>
                             </div>
                         </div>
                     </div>
@@ -610,6 +610,30 @@
             {
                 id: 19,
                 layout: 'detail',
+                tag: "發錢實作",
+                title: "太少了？比特幣空投 (2010年)",
+                content: (
+                    <div className="flex flex-col md:flex-row gap-6 md:gap-8 h-full min-h-0">
+                        <div className="flex-shrink-0 w-full md:max-w-[42%] flex items-center justify-center">
+                            <img src="https://i.urusai.cc/mBriO.png" alt="Free Bitcoins 網站 (2010)" className="max-h-[320px] md:max-h-[380px] w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        </div>
+                        <div className="flex flex-col justify-center gap-4 flex-1 min-w-0 overflow-y-auto">
+                            <p className="text-lg text-slate-700">
+                                2010 年有人架了「free bitcoins」網站：填一次 captcha 就送 5 顆比特幣。目的是讓大家<strong>親手領過、用過</strong>，才會真正理解比特幣是什麼。
+                            </p>
+                            <p className="text-lg text-slate-700">
+                                當時 5 顆比特幣幾乎沒人在乎，發了一陣子還領不完；放到現在，那 5 顆的價值早已不可同日而語。
+                            </p>
+                            <p className="text-lg text-slate-700">
+                                今天我們發給大家的空投，論「量」其實比當年多很多——但就像當年很多人沒去領一樣，現在也常因為錢包、網路或步驟不熟，很多人領不到。這頁想說的就是這樣一個對照：<strong>從「沒人想領」到「想領卻領不到」</strong>，技術門檻一直都在。
+                            </p>
+                        </div>
+                    </div>
+                )
+            },
+            {
+                id: 20,
+                layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
                 content: (
@@ -640,7 +664,7 @@
                 )
             },
             {
-                id: 20,
+                id: 21,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -665,7 +689,7 @@
                 )
             },
             {
-                id: 21,
+                id: 22,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -692,7 +716,7 @@
                 )
             },
             {
-                id: 22,
+                id: 23,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -727,7 +751,7 @@
                 )
             },
             {
-                id: 23,
+                id: 24,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
