--- a/index.html
+++ b/index.html
@@ -593,15 +593,15 @@
                 tag: "發錢實作",
                 title: "轉帳資訊匿名公開",
                 content: (
-                    <div className="flex flex-col h-full min-h-0 gap-4 md:gap-6">
+                    <div className="flex flex-col h-full min-h-0 gap-3 md:gap-4">
                         <p className="text-lg text-slate-600 flex-shrink-0">
-                            只要有對方的錢包地址，就可以看到對方的交易記錄。鏈上金流只要有地址就能追蹤——前面用以太幣空投給大家，所以可以直接從鏈上看到所有人的金流記錄。
+                            只要有對方的錢包地址，就可以看到對方的交易記錄。鏈上金流只要有地址就能追蹤——前面用 ETH 空投給大家，所以可以直接從鏈上看到所有人的金流記錄。
+                            <a href="https://www.oklink.com" target="_blank" rel="noopener noreferrer" className="ml-1 text-amber-600 hover:text-amber-700 font-bold underline whitespace-nowrap">在 OKLink 查詢鏈上交易 →</a>
                         </p>
-                        <a href="https://www.oklink.com" target="_blank" rel="noopener noreferrer" className="inline-flex items-center gap-2 text-amber-600 hover:text-amber-700 font-bold text-lg underline flex-shrink-0">
-                            在 OKLink 查詢鏈上交易 →
-                        </a>
                         <div className="flex-1 min-h-0 flex items-center justify-center overflow-hidden">
-                            <img src="https://i.urusai.cc/gIGej.png" alt="OKLink 鏈上交易查詢畫面" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                            <a href="https://www.oklink.com" target="_blank" rel="noopener noreferrer" className="block h-full flex items-center justify-center">
+                                <img src="https://i.urusai.cc/gIGej.png" alt="OKLink 鏈上交易查詢畫面" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg hover:opacity-90 transition-opacity" />
+                            </a>
                         </div>
                         <p className="text-center text-sm text-slate-500 flex-shrink-0">OKLink：輸入錢包地址即可追蹤鏈上金流</p>
                     </div>
@@ -613,26 +613,34 @@
                 tag: "發錢實作",
                 title: "太少了？比特幣空投 (2010年)",
                 content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/mBriO.png" alt="Free Bitcoins 網站 (2010)" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 20,
+                layout: 'detail',
+                tag: "發錢實作",
+                title: "能花嗎？比特幣披薩日（2010）",
+                content: (
                     <div className="flex flex-col md:flex-row gap-6 md:gap-8 h-full min-h-0">
-                        <div className="flex-shrink-0 w-full md:max-w-[42%] flex items-center justify-center">
-                            <img src="https://i.urusai.cc/mBriO.png" alt="Free Bitcoins 網站 (2010)" className="max-h-[320px] md:max-h-[380px] w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        <div className="flex-shrink-0 w-full md:max-w-[45%] flex items-center justify-center">
+                            <img src="https://l.urusai.cc/fBQrc.png" alt="Laszlo Hanyecz 兩歲女兒手拿披薩（比特幣披薩日）" className="max-h-[320px] md:max-h-[400px] w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                         </div>
                         <div className="flex flex-col justify-center gap-4 flex-1 min-w-0 overflow-y-auto">
                             <p className="text-lg text-slate-700">
-                                2010 年有人架了「free bitcoins」網站：填一次 captcha 就送 5 顆比特幣。目的是讓大家<strong>親手領過、用過</strong>，才會真正理解比特幣是什麼。
+                                大家常問：<strong>「拿到加密貨幣，能花嗎？」</strong> 2010 年就有人用實際行動回答了——Laszlo Hanyecz 用一萬顆比特幣換了兩份披薩，這天成了「比特幣披薩日」。
                             </p>
                             <p className="text-lg text-slate-700">
-                                當時 5 顆比特幣幾乎沒人在乎，發了一陣子還領不完；放到現在，那 5 顆的價值早已不可同日而語。
-                            </p>
-                            <p className="text-lg text-slate-700">
-                                今天我們發給大家的空投，論「量」其實比當年多很多——但就像當年很多人沒去領一樣，現在也常因為錢包、網路或步驟不熟，很多人領不到。這頁想說的就是這樣一個對照：<strong>從「沒人想領」到「想領卻領不到」</strong>，技術門檻一直都在。
+                                為什麼大家要紀念這一天？因為那是第一次有人真的把比特幣當成「可以花的錢」拿來換實體東西，證明加密貨幣不只能存在錢包裡，還能完成一筆真正的交易。圖中是 Laszlo 當時兩歲女兒拿著那份披薩的照片。
                             </p>
                         </div>
                     </div>
                 )
             },
             {
-                id: 20,
+                id: 21,
                 layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
@@ -664,7 +672,7 @@
                 )
             },
             {
-                id: 21,
+                id: 22,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -689,7 +697,7 @@
                 )
             },
             {
-                id: 22,
+                id: 23,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -716,7 +724,7 @@
                 )
             },
             {
-                id: 23,
+                id: 24,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -751,7 +759,7 @@
                 )
             },
             {
-                id: 24,
+                id: 25,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
