--- a/index.html
+++ b/index.html
@@ -642,6 +642,17 @@
             {
                 id: 21,
                 layout: 'detail',
+                tag: "發錢實作",
+                title: "萬一錢包弄丟怎麼辦？（2009）",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/IVHrI.png" alt="錢包私鑰截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 22,
+                layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
                 content: (
@@ -672,7 +683,7 @@
                 )
             },
             {
-                id: 22,
+                id: 23,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -697,7 +708,7 @@
                 )
             },
             {
-                id: 23,
+                id: 24,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -724,7 +735,7 @@
                 )
             },
             {
-                id: 24,
+                id: 25,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -759,7 +770,7 @@
                 )
             },
             {
-                id: 25,
+                id: 26,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
