--- a/index.html
+++ b/index.html
@@ -613,8 +613,8 @@
                 tag: "發錢實作",
                 title: "太少了？比特幣空投 (2010年)",
                 content: (
-                    <div className="flex items-center justify-center h-full min-h-0 p-4">
-                        <img src="https://i.urusai.cc/mBriO.png" alt="Free Bitcoins 網站 (2010)" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    <div className="flex items-center justify-center h-full min-h-0 p-2 md:p-4">
+                        <img src="https://i.urusai.cc/mBriO.png" alt="Free Bitcoins 網站 (2010)" className="max-h-[92vh] max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                     </div>
                 )
             },
@@ -624,18 +624,8 @@
                 tag: "發錢實作",
                 title: "能花嗎？比特幣披薩日（2010）",
                 content: (
-                    <div className="flex flex-col md:flex-row gap-6 md:gap-8 h-full min-h-0">
-                        <div className="flex-shrink-0 w-full md:max-w-[45%] flex items-center justify-center">
-                            <img src="https://l.urusai.cc/fBQrc.png" alt="Laszlo Hanyecz 兩歲女兒手拿披薩（比特幣披薩日）" className="max-h-[320px] md:max-h-[400px] w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
-                        </div>
-                        <div className="flex flex-col justify-center gap-4 flex-1 min-w-0 overflow-y-auto">
-                            <p className="text-lg text-slate-700">
-                                大家常問：<strong>「拿到加密貨幣，能花嗎？」</strong> 2010 年就有人用實際行動回答了——Laszlo Hanyecz 用一萬顆比特幣換了兩份披薩，這天成了「比特幣披薩日」。
-                            </p>
-                            <p className="text-lg text-slate-700">
-                                為什麼大家要紀念這一天？因為那是第一次有人真的把比特幣當成「可以花的錢」拿來換實體東西，證明加密貨幣不只能存在錢包裡，還能完成一筆真正的交易。圖中是 Laszlo 當時兩歲女兒拿著那份披薩的照片。
-                            </p>
-                        </div>
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://l.urusai.cc/fBQrc.png" alt="Laszlo Hanyecz 兩歲女兒手拿披薩（比特幣披薩日）" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                     </div>
                 )
             },
@@ -652,6 +642,23 @@
             },
             {
                 id: 22,
+                layout: 'detail',
+                tag: "發錢實作",
+                title: "買下垃圾場的男人（2013）",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://l.urusai.cc/oYHrU.png" alt="買下垃圾場的男人" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 23,
+                layout: 'section',
+                title: "加密貨幣的創新",
+                subtitle: "中場下課時間"
+            },
+            {
+                id: 24,
                 layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
@@ -683,7 +690,7 @@
                 )
             },
             {
-                id: 23,
+                id: 25,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -708,7 +715,7 @@
                 )
             },
             {
-                id: 24,
+                id: 26,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -735,7 +742,7 @@
                 )
             },
             {
-                id: 25,
+                id: 27,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -770,7 +777,7 @@
                 )
             },
             {
-                id: 26,
+                id: 28,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
