--- a/index.html
+++ b/index.html
@@ -613,8 +613,8 @@
                 tag: "發錢實作",
                 title: "太少了？比特幣空投 (2010年)",
                 content: (
-                    <div className="flex items-center justify-center h-full min-h-0 p-2 md:p-4">
-                        <img src="https://i.urusai.cc/mBriO.png" alt="Free Bitcoins 網站 (2010)" className="max-h-[92vh] max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/mBriO.png" alt="Free Bitcoins 網站 (2010)" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                     </div>
                 )
             },
@@ -653,12 +653,18 @@
             },
             {
                 id: 23,
-                layout: 'section',
-                title: "加密貨幣的創新",
-                subtitle: "中場下課時間"
+                layout: 'break',
+                title: "中場下課時間",
+                slidoUrl: "https://app.sli.do/event/v5E2ZdcCzhE9FHG2EfHh7z"
             },
             {
                 id: 24,
+                layout: 'section',
+                title: "加密貨幣的創新",
+                subtitle: "穩定幣、DeFi 與鏈上金融"
+            },
+            {
+                id: 25,
                 layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
@@ -690,7 +696,7 @@
                 )
             },
             {
-                id: 25,
+                id: 26,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -715,7 +721,7 @@
                 )
             },
             {
-                id: 26,
+                id: 27,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -742,7 +748,7 @@
                 )
             },
             {
-                id: 27,
+                id: 28,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -777,7 +783,7 @@
                 )
             },
             {
-                id: 28,
+                id: 29,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
@@ -877,6 +883,26 @@
                                 <p className="text-xl md:text-2xl text-slate-300 font-medium max-w-2xl">{slide.subtitle}</p>
                             </div>
                         );
+                    case 'break':
+                        return (
+                            <div className="flex flex-col items-center justify-center h-full text-center px-6">
+                                <div className="mb-6 md:mb-8 text-amber-400/90" aria-hidden="true">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round"><path d="M17 8h1a4 4 0 1 1 0 8h-1"/><path d="M3 8h14v9a4 4 0 0 1-4 4H7a4 4 0 0 1-4-4Z"/><line x1="6" x2="6" y1="2" y2="4"/><line x1="10" x2="10" y1="2" y2="4"/><line x1="14" x2="14" y1="2" y2="4"/></svg>
+                                </div>
+                                <h2 className="text-3xl md:text-5xl font-bold text-white mb-3 md:mb-4 tracking-tight">{slide.title}</h2>
+                                <p className="text-lg md:text-xl text-slate-400 font-medium mb-8 md:mb-10">喝杯咖啡，稍後回來</p>
+                                <div className="flex flex-col sm:flex-row items-center justify-center gap-4">
+                                    {slide.slidoUrl && (
+                                        <a href={slide.slidoUrl} target="_blank" rel="noopener noreferrer" className="inline-flex items-center gap-2 px-6 py-3 bg-indigo-600 hover:bg-indigo-500 text-white font-bold rounded-full shadow-lg transition-all hover:scale-105">
+                                            即時提問 →
+                                        </a>
+                                    )}
+                                    <a href="info.html" target="_blank" rel="noopener noreferrer" className="inline-flex items-center gap-2 px-6 py-3 bg-amber-500 hover:bg-amber-400 text-white font-bold rounded-full shadow-lg transition-all hover:scale-105">
+                                        活動資訊 →
+                                    </a>
+                                </div>
+                            </div>
+                        );
                     case 'detail':
                         return (
                             <div className="flex flex-col h-full px-4 md:px-10 py-6 md:py-8 max-w-7xl mx-auto overflow-hidden min-h-0">
@@ -898,8 +924,8 @@
                 <div className="w-full h-screen flex flex-col bg-slate-100">
                     {/* 主要簡報區塊 */}
                     <main className="flex-1 relative overflow-hidden flex items-center justify-center p-0 md:p-4 lg:p-6">
-                        <div className={`w-full h-full md:max-w-[100rem] md:h-full md:rounded-[2.5rem] shadow-xl overflow-hidden relative mx-auto my-auto flex flex-col ${slides[currentSlide].layout === 'section' ? 'bg-slate-800 border border-slate-600' : 'bg-white border border-slate-200'}`}>
-                            <div className={`w-full h-full overflow-hidden relative ${slides[currentSlide].layout === 'section' ? 'p-0' : 'p-2 md:p-6'}`}>
+                        <div className={`w-full h-full md:max-w-[100rem] md:h-full md:rounded-[2.5rem] shadow-xl overflow-hidden relative mx-auto my-auto flex flex-col ${slides[currentSlide].layout === 'section' || slides[currentSlide].layout === 'break' ? 'bg-slate-800 border border-slate-600' : 'bg-white border border-slate-200'}`}>
+                            <div className={`w-full h-full overflow-hidden relative ${slides[currentSlide].layout === 'section' || slides[currentSlide].layout === 'break' ? 'p-0' : 'p-2 md:p-6'}`}>
                                 {renderContent(slides[currentSlide])}
                             </div>
                         </div>
