feat: 加密貨幣的創新後新增 6 頁（銀行轉帳VS區塊鏈、差異在哪、礦工、數位面交、優缺點分析 section、缺點）
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -666,6 +666,93 @@
             {
                 id: 25,
                 layout: 'detail',
+                tag: "加密貨幣的創新",
+                title: "銀行轉帳 VS 區塊鏈支付",
+                content: (
+                    <div className="flex flex-col items-center justify-center h-full min-h-0 p-4">
+                        <p className="text-center text-slate-600 mb-4 flex-shrink-0">明恩付錢給工讀生的例子</p>
+                        <div className="flex-1 min-h-0 w-full flex items-center justify-center">
+                            <img src="https://i.urusai.cc/PLACEHOLDER_BANK_VS_CHAIN.png" alt="銀行轉帳 VS 區塊鏈支付比較圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        </div>
+                    </div>
+                )
+            },
+            {
+                id: 26,
+                layout: 'detail',
+                tag: "加密貨幣的創新",
+                title: "差異在哪？",
+                content: (
+                    <div className="flex flex-col h-full justify-center gap-6">
+                        <p className="text-xl md:text-2xl text-amber-700 font-bold border-l-4 border-amber-500 pl-4">加密貨幣是數位現金</p>
+                        <ul className="space-y-4 text-lg md:text-xl text-slate-700">
+                            <li className="flex items-start gap-3">
+                                <span className="flex-shrink-0 w-8 h-8 rounded-full bg-amber-500 text-white font-bold flex items-center justify-center">1</span>
+                                <span>數位面交：從錢包到錢包。</span>
+                            </li>
+                            <li className="flex items-start gap-3">
+                                <span className="flex-shrink-0 w-8 h-8 rounded-full bg-amber-500 text-white font-bold flex items-center justify-center">2</span>
+                                <span>金流沒有經過銀行，而是經過區塊鏈，無法凍結資產。</span>
+                            </li>
+                            <li className="flex items-start gap-3">
+                                <span className="flex-shrink-0 w-8 h-8 rounded-full bg-amber-500 text-white font-bold flex items-center justify-center">3</span>
+                                <span>區塊鏈由礦工營運，而不是銀行跟政府。</span>
+                            </li>
+                        </ul>
+                    </div>
+                )
+            },
+            {
+                id: 27,
+                layout: 'detail',
+                tag: "加密貨幣的創新",
+                title: "礦工是區塊鏈的營運者",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/PLACEHOLDER_BITCOIN_NODES.png" alt="Bitcoin nodes 畫面截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 28,
+                layout: 'detail',
+                tag: "加密貨幣的創新",
+                title: "數位面交",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/PLACEHOLDER_DIGITAL_F2F.png" alt="數位面交坐標圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 29,
+                layout: 'section',
+                title: "優缺點分析",
+                subtitle: "區塊鏈支付的利弊"
+            },
+            {
+                id: 30,
+                layout: 'detail',
+                tag: "優缺點分析",
+                title: "缺點",
+                content: (
+                    <div className="flex flex-col h-full justify-center gap-6">
+                        <ul className="space-y-4 text-lg md:text-xl text-slate-700">
+                            <li className="flex items-start gap-3">
+                                <span className="flex-shrink-0 w-8 h-8 rounded-full bg-slate-600 text-white font-bold flex items-center justify-center">1</span>
+                                <span>沒有實名登記，政府監管困難。</span>
+                            </li>
+                            <li className="flex items-start gap-3">
+                                <span className="flex-shrink-0 w-8 h-8 rounded-full bg-slate-600 text-white font-bold flex items-center justify-center">2</span>
+                                <span>資金流向半透明，轉帳一去不復返。</span>
+                            </li>
+                        </ul>
+                    </div>
+                )
+            },
+            {
+                id: 31,
+                layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
                 content: (
@@ -696,7 +783,7 @@
                 )
             },
             {
-                id: 26,
+                id: 32,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -721,7 +808,7 @@
                 )
             },
             {
-                id: 27,
+                id: 33,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -748,7 +835,7 @@
                 )
             },
             {
-                id: 28,
+                id: 34,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -783,7 +870,7 @@
                 )
             },
             {
-                id: 29,
+                id: 35,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
