--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
                     <div className="flex flex-col items-center justify-center h-full min-h-0 p-4">
                         <p className="text-center text-slate-600 mb-4 flex-shrink-0">明恩付錢給工讀生的例子</p>
                         <div className="flex-1 min-h-0 w-full flex items-center justify-center">
-                            <img src="https://i.urusai.cc/PLACEHOLDER_BANK_VS_CHAIN.png" alt="銀行轉帳 VS 區塊鏈支付比較圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                            <img src="https://i.urusai.cc/UIXR5.png" alt="銀行轉帳 VS 區塊鏈支付比較圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                         </div>
                     </div>
                 )
@@ -709,7 +709,7 @@
                 title: "礦工是區塊鏈的營運者",
                 content: (
                     <div className="flex items-center justify-center h-full min-h-0 p-4">
-                        <img src="https://i.urusai.cc/PLACEHOLDER_BITCOIN_NODES.png" alt="Bitcoin nodes 畫面截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        <img src="https://i.urusai.cc/TN7l6.png" alt="Bitcoin nodes 畫面截圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                     </div>
                 )
             },
@@ -720,7 +720,7 @@
                 title: "數位面交",
                 content: (
                     <div className="flex items-center justify-center h-full min-h-0 p-4">
-                        <img src="https://i.urusai.cc/PLACEHOLDER_DIGITAL_F2F.png" alt="數位面交坐標圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        <img src="https://i.urusai.cc/niaLs.png" alt="數位面交坐標圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                     </div>
                 )
             },
