feat: 第30頁後新增優點/加密貨幣哪裡來/如何取得/交易所，第25頁移除說明文，第26/30頁加圖示與版面優化
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -669,11 +669,8 @@
                 tag: "加密貨幣的創新",
                 title: "銀行轉帳 VS 區塊鏈支付",
                 content: (
-                    <div className="flex flex-col items-center justify-center h-full min-h-0 p-4">
-                        <p className="text-center text-slate-600 mb-4 flex-shrink-0">明恩付錢給工讀生的例子</p>
-                        <div className="flex-1 min-h-0 w-full flex items-center justify-center">
-                            <img src="https://i.urusai.cc/UIXR5.png" alt="銀行轉帳 VS 區塊鏈支付比較圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
-                        </div>
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/UIXR5.png" alt="銀行轉帳 VS 區塊鏈支付比較圖" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                     </div>
                 )
             },
@@ -683,19 +680,25 @@
                 tag: "加密貨幣的創新",
                 title: "差異在哪？",
                 content: (
-                    <div className="flex flex-col h-full justify-center gap-6">
-                        <p className="text-xl md:text-2xl text-amber-700 font-bold border-l-4 border-amber-500 pl-4">加密貨幣是數位現金</p>
-                        <ul className="space-y-4 text-lg md:text-xl text-slate-700">
-                            <li className="flex items-start gap-3">
-                                <span className="flex-shrink-0 w-8 h-8 rounded-full bg-amber-500 text-white font-bold flex items-center justify-center">1</span>
+                    <div className="flex flex-col h-full justify-center gap-4 max-w-4xl mx-auto">
+                        <p className="text-xl md:text-2xl text-amber-700 font-bold border-l-4 border-amber-500 pl-4 mb-2">加密貨幣是數位現金</p>
+                        <ul className="space-y-3 text-lg md:text-xl text-slate-700">
+                            <li className="flex items-start gap-3 p-3 rounded-xl bg-amber-50/80 border border-amber-100">
+                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-amber-500 text-white flex items-center justify-center">
+                                    <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z" /></svg>
+                                </span>
                                 <span>數位面交：從錢包到錢包。</span>
                             </li>
-                            <li className="flex items-start gap-3">
-                                <span className="flex-shrink-0 w-8 h-8 rounded-full bg-amber-500 text-white font-bold flex items-center justify-center">2</span>
+                            <li className="flex items-start gap-3 p-3 rounded-xl bg-amber-50/80 border border-amber-100">
+                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-amber-500 text-white flex items-center justify-center">
+                                    <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" /></svg>
+                                </span>
                                 <span>金流沒有經過銀行，而是經過區塊鏈，無法凍結資產。</span>
                             </li>
-                            <li className="flex items-start gap-3">
-                                <span className="flex-shrink-0 w-8 h-8 rounded-full bg-amber-500 text-white font-bold flex items-center justify-center">3</span>
+                            <li className="flex items-start gap-3 p-3 rounded-xl bg-amber-50/80 border border-amber-100">
+                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-amber-500 text-white flex items-center justify-center">
+                                    <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-1 4h6" /></svg>
+                                </span>
                                 <span>區塊鏈由礦工營運，而不是銀行跟政府。</span>
                             </li>
                         </ul>
@@ -736,14 +739,18 @@
                 tag: "優缺點分析",
                 title: "缺點",
                 content: (
-                    <div className="flex flex-col h-full justify-center gap-6">
-                        <ul className="space-y-4 text-lg md:text-xl text-slate-700">
-                            <li className="flex items-start gap-3">
-                                <span className="flex-shrink-0 w-8 h-8 rounded-full bg-slate-600 text-white font-bold flex items-center justify-center">1</span>
+                    <div className="flex flex-col h-full justify-center gap-4 max-w-3xl mx-auto">
+                        <ul className="space-y-3 text-lg md:text-xl text-slate-700">
+                            <li className="flex items-start gap-3 p-4 rounded-xl bg-slate-50 border border-slate-200">
+                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-slate-600 text-white flex items-center justify-center">
+                                    <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M10 6H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V8a2 2 0 00-2-2h-5m-4 0V5a2 2 0 114 0v1m-4 0a2 2 0 104 0m-5 8a2 2 0 100-4 2 2 0 000 4zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 00-2.83 2M15 11h3m-3 4h2" /></svg>
+                                </span>
                                 <span>沒有實名登記，政府監管困難。</span>
                             </li>
-                            <li className="flex items-start gap-3">
-                                <span className="flex-shrink-0 w-8 h-8 rounded-full bg-slate-600 text-white font-bold flex items-center justify-center">2</span>
+                            <li className="flex items-start gap-3 p-4 rounded-xl bg-slate-50 border border-slate-200">
+                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-slate-600 text-white flex items-center justify-center">
+                                    <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M13 7l5 5m0 0l-5 5m5-5H6" /><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M4 12h.01" /></svg>
+                                </span>
                                 <span>資金流向半透明，轉帳一去不復返。</span>
                             </li>
                         </ul>
@@ -752,6 +759,84 @@
             },
             {
                 id: 31,
+                layout: 'detail',
+                tag: "優缺點分析",
+                title: "優點",
+                content: (
+                    <div className="flex flex-col h-full justify-center gap-4 max-w-4xl mx-auto">
+                        <ul className="space-y-3 text-lg md:text-xl text-slate-700">
+                            <li className="flex items-start gap-3 p-3 rounded-xl bg-emerald-50 border border-emerald-100">
+                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-emerald-500 text-white font-bold flex items-center justify-center">1</span>
+                                <span>轉帳像傳 LINE 一樣簡單！網路不分網內外，區塊鏈不分行內外。</span>
+                            </li>
+                            <li className="flex items-start gap-3 p-3 rounded-xl bg-emerald-50 border border-emerald-100">
+                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-emerald-500 text-white font-bold flex items-center justify-center">2</span>
+                                <span>網路處理資訊（info），區塊鏈處理資產（asset）。</span>
+                            </li>
+                            <li className="flex items-start gap-3 p-3 rounded-xl bg-emerald-50 border border-emerald-100">
+                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-emerald-500 text-white font-bold flex items-center justify-center">3</span>
+                                <span>區塊鏈是第二次網路革命，金融首當其衝。</span>
+                            </li>
+                        </ul>
+                    </div>
+                )
+            },
+            {
+                id: 32,
+                layout: 'section',
+                title: "加密貨幣哪裡來?",
+                subtitle: "從哪裡取得、如何進入鏈上"
+            },
+            {
+                id: 33,
+                layout: 'detail',
+                tag: "加密貨幣哪裡來?",
+                title: "如何取得加密貨幣",
+                content: (
+                    <div className="flex flex-col h-full justify-center gap-6 max-w-3xl mx-auto">
+                        <p className="text-lg text-slate-600 mb-2">兩種主要方式：</p>
+                        <ul className="space-y-4 text-lg md:text-xl text-slate-700">
+                            <li className="flex items-start gap-3 p-4 rounded-xl bg-slate-50 border border-slate-200">
+                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-amber-500 text-white font-bold flex items-center justify-center">1</span>
+                                <span><strong>交易所或面交買幣</strong> — 用法幣或當面交易換取加密貨幣。</span>
+                            </li>
+                            <li className="flex items-start gap-3 p-4 rounded-xl bg-slate-50 border border-slate-200">
+                                <span className="flex-shrink-0 w-10 h-10 rounded-full bg-amber-500 text-white font-bold flex items-center justify-center">2</span>
+                                <span><strong>成為礦工挖礦</strong> — 提供算力維護區塊鏈，獲得區塊獎勵。</span>
+                            </li>
+                        </ul>
+                    </div>
+                )
+            },
+            {
+                id: 34,
+                layout: 'detail',
+                tag: "加密貨幣哪裡來?",
+                title: "交易所",
+                content: (
+                    <div className="flex flex-col h-full justify-center gap-4 max-w-4xl mx-auto">
+                        <div className="flex flex-wrap items-center justify-center gap-2 md:gap-4 text-base md:text-lg text-slate-700">
+                            <span className="px-3 py-2 rounded-lg bg-blue-50 border border-blue-100 font-medium">銀行帳戶</span>
+                            <span className="text-slate-400">→</span>
+                            <span className="px-3 py-2 rounded-lg bg-slate-100 border border-slate-200">新台幣轉帳</span>
+                            <span className="text-slate-400">→</span>
+                            <span className="px-3 py-2 rounded-lg bg-amber-50 border border-amber-200 font-medium">交易所</span>
+                        </div>
+                        <p className="text-center text-slate-600">交易所可將加密貨幣：</p>
+                        <div className="flex flex-col sm:flex-row items-center justify-center gap-4">
+                            <div className="px-5 py-4 rounded-xl bg-slate-50 border border-slate-200 text-center">
+                                <span className="font-medium text-slate-800">提領到個人錢包</span>
+                            </div>
+                            <span className="text-slate-400 font-medium">或</span>
+                            <div className="px-5 py-4 rounded-xl bg-slate-50 border border-slate-200 text-center">
+                                <span className="font-medium text-slate-800">轉帳到國外交易所</span>
+                            </div>
+                        </div>
+                    </div>
+                )
+            },
+            {
+                id: 35,
                 layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
@@ -783,7 +868,7 @@
                 )
             },
             {
-                id: 32,
+                id: 36,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -808,7 +893,7 @@
                 )
             },
             {
-                id: 33,
+                id: 37,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -835,7 +920,7 @@
                 )
             },
             {
-                id: 34,
+                id: 38,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -870,7 +955,7 @@
                 )
             },
             {
-                id: 35,
+                id: 39,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
